# caravel

./: .gitignore  Cargo.toml  README.md  build.sh  logo.txt  stdlib.c
src/: analyzer.rs  ansi.rs  compilation_error.rs  error.rs  main.rs  position.rs  print.rs  source_string.rs  symbol_table.rs  types.rs
src/backend/: print.rs
src/codegen/: codegen.rs  mod.rs  symbol_table.rs
src/lexer/: lexer.rs  mod.rs  token.rs  tokens.rs  util.rs
src/parser/: ast.rs  ast_json.rs  mod.rs  parser.rs
src/position/: mod.rs  source_position.rs  token_position.rs
src/semantic_analyzer/: semantic_analyzer.rs
