[package]
name = "caravel-compiler-5"
version = "0.1.0"
authors = ["Sawyer Herbst <sawyer.herbst@myparadigm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
enum-kinds = "0.5.0"
clap = "~2.27.0"

[[bin]]
name = "cvc"
path = "src/main.rs"